<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditServiceOrderActivity">


    <EditText
        android:id="@+id/notifi"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_side"
        android:ems="10"
        android:hint="@string/notify"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifyTV"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/descrption"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_marginBottom="420dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descrptionTV"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/serviceName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_marginBottom="348dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tite"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_side"
        android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
        android:textColor="#0C0C0C"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toEndOf="@+id/dateText"
        app:layout_constraintTop_toBottomOf="@+id/reqdateTV"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_side"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqdateTV"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveOrder"
        android:text="Mentés"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderDate"
        app:layout_constraintVertical_bias="0.558"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"/>

    <TextView
        android:id="@+id/orderDate"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_side"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderDateTV"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/tite"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:fontFamily="sans-serif-black"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mégse"
        android:onClick="cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/orderDate"
        app:layout_constraintVertical_bias="0.558"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"/>

    <TextView
        android:id="@+id/notifyTV"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_marginBottom="348dp"
        android:text="@string/notify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceName"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/descrptionTV"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_marginBottom="348dp"
        android:text="Leírás:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifi"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/reqdateTV"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_marginBottom="348dp"
        android:text="@string/reqdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descrption"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/orderDateTV"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_side"
        android:layout_marginBottom="348dp"
        android:text="@string/orderdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText"
        app:layout_constraintVertical_bias="0.052" />


</androidx.constraintlayout.widget.ConstraintLayout>